--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <link href="./assets/github-markdown.css" rel="stylesheet">
 </head>
-<body class="w-full min-h-full">
+<body class="relative w-full min-h-full">
 <app-root></app-root>
 </body>
 </html>
