--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- HTML Meta Tags -->
+    <title>Document My Project</title>
+    <meta content="Document My Project" name="title"/>
+    <meta content="Luis Ventura" name="author"/>
+    <meta content="Easily create markdown documentation for your project." name="description"/>
+    <meta content="document,readme,documentation,project,github" name="keywords"/>
+    <meta content="English" name="language"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta content="index, follow" name="robots">
+
+    <!-- Facebook Meta Tags -->
+    <meta content="website" property="og:type">
+    <meta content="Document My Project" property="og:title"/>
+    <meta content="Document My Project" property="og:site_name"/>
+    <meta content="Easily create markdown documentation for your project." property="og:description"/>
+    <meta content="https://documentmyproject.lv-apps.com/assets/images/dmp_2.png" property="og:image"/>
+    <meta content="https://documentmyproject.lv-apps.com" property="og:url">
+
+    <!-- Twitter Meta Tags -->
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="Document My Project" name="twitter:title"/>
+    <meta content="Easily create markdown documentation for your project." name="twitter:description"/>
+    <meta content="https://documentmyproject.lv-apps.com/assets/images/dmp_2.png" name="twitter:image"/>
+    <meta content="documentmyproject.lv-apps.com" name="twitter:domain">
+    <meta content="https://documentmyproject.lv-apps.com/" name="twitter:url">
+
+    <!-- Meta Tags Generated with metatags.lv-apps.com -->
+
     <meta charset="utf-8">
-    <title>DocumentMyProject</title>
     <base href="/">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="favicon.ico" rel="icon" type="image/x-icon">
